--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@vercel/analytics": "latest",
     "next": "16.0.6",
     "react": "19.2.0",
     "react-dom": "19.2.0"
