--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.0.3",
-    "@vercel/analytics": "latest"
+    "react": "^18",
+    "react-dom": "^18",
+    "next": "15.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
