--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "eslint": "^8",
     "eslint-config-next": "16.0.6",
     "postcss": "^8",
-    "tailwindcss": "^4.0.0-alpha.20",
-    "@tailwindcss/postcss": "^4.0.0-alpha.20",
+    "tailwindcss": "^4.1.5",
+    "@tailwindcss/postcss": "^4.1.5",
     "autoprefixer": "^10.4.20",
     "typescript": "^5"
   }
