--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^9.14.0",
     "eslint-config-next": "16.0.7",
     "postcss": "^8",
     "tailwindcss": "^4.0.0",
     "@tailwindcss/postcss": "^4.0.0",
     "autoprefixer": "^10.4.20",
     "typescript": "^5"
+  },
+  "overrides": {
+    "glob": "^10.4.5",
+    "rimraf": "^5.0.10",
+    "inflight": "npm:@isaacs/inflight@1.0.6"
   }
 }
