--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "@vercel/kv": "^1.0.0",
     "next": "16.0.7"
   },
   "devDependencies": {
